--- a/index.html
+++ b/index.html
@@ -2,145 +2,142 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>ダメージ補正計算ツール</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background: #f7f7f7;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 {
-      text-align: center;
-    }
-    .tabs {
-      display: flex;
-      margin-bottom: 20px;
-      border-bottom: 2px solid #ccc;
-    }
-    .tab {
-      flex: 1;
-      text-align: center;
-      padding: 10px;
-      cursor: pointer;
-      background: #eee;
-    }
-    .tab.active {
-      background: white;
-      border-top: 2px solid #007acc;
-      border-left: 2px solid #007acc;
-      border-right: 2px solid #007acc;
-      border-bottom: 2px solid white;
-    }
-    .content {
-      display: none;
-      background: white;
-      padding: 20px;
-      border: 2px solid #007acc;
-      border-radius: 0 0 8px 8px;
-    }
-    .content.active {
-      display: block;
-    }
-    label {
-      display: block;
-      margin: 10px 0 5px;
-    }
-    input {
-      width: 100%;
-      padding: 8px;
-      font-size: 14px;
-    }
-    button {
-      margin-top: 15px;
-      padding: 10px 20px;
-      background: #007acc;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .result {
-      margin-top: 15px;
-      font-weight: bold;
-      font-size: 18px;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>ダメージ補正計算ツール（OPTc）</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h1>ダメージ補正計算ツール</h1>
+<body class="bg-gray-50 text-gray-900">
+  <div class="max-w-2xl mx-auto p-6">
+    <h1 class="text-2xl font-bold text-center mb-6">ダメージ補正計算ツール（OPTc）</h1>
 
-  <div class="tabs">
-    <div class="tab active" data-tab="corrected">補正ダメージ計算</div>
-    <div class="tab" data-tab="actual">実ダメージ計算</div>
-  </div>
+    <!-- タブ -->
+    <div class="flex space-x-2 mb-6 justify-center">
+      <button class="tab-btn px-4 py-2 rounded-lg border bg-white shadow text-sm font-semibold data-[active=true]:bg-blue-500 data-[active=true]:text-white"
+              data-tab="tab-corrected" data-active="true">
+        補正ダメージ計算
+      </button>
+      <button class="tab-btn px-4 py-2 rounded-lg border bg-white shadow text-sm font-semibold data-[active=true]:bg-blue-500 data-[active=true]:text-white"
+              data-tab="tab-actual" data-active="false">
+        実ダメージ計算
+      </button>
+    </div>
 
-  <div id="corrected" class="content active">
-    <label>実ダメージ（兆）:</label>
-    <input type="number" id="actualInput" step="any">
-    <label>限界突破値:</label>
-    <input type="number" id="limitInput1" step="any">
-    <button onclick="calculateCorrected()">計算</button>
-    <div id="correctedResult" class="result"></div>
-  </div>
+    <!-- 補正ダメージ計算 -->
+    <div id="tab-corrected" class="tab-content bg-white p-6 rounded-xl shadow-md">
+      <label class="block text-sm font-medium mb-1">実ダメージ（兆）</label>
+      <input type="number" id="actualInput" step="any" placeholder="例: 334"
+             class="w-full px-3 py-2 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
 
-  <div id="actual" class="content">
-    <label>補正ダメージ（兆）:</label>
-    <input type="number" id="correctedInput" step="any">
-    <label>限界突破値:</label>
-    <input type="number" id="limitInput2" step="any">
-    <button onclick="calculateActual()">計算</button>
-    <div id="actualResult" class="result"></div>
+      <label class="block text-sm font-medium mb-1">限界突破値</label>
+      <input type="number" id="limitInput1" step="any" placeholder="例: 1.9"
+             class="w-full px-3 py-2 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+
+      <div class="flex space-x-3 mb-4">
+        <button id="calcCorrectedBtn"
+                class="px-4 py-2 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700">
+          計算
+        </button>
+        <button id="exampleBtn"
+                class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg shadow hover:bg-gray-300">
+          例を入力（334, 1.9）
+        </button>
+      </div>
+
+      <div id="correctedResult" class="result text-lg font-bold text-blue-700"></div>
+      <p class="text-xs text-gray-600 mt-2">※ Excel の ROUNDDOWN(...,0) と同じ挙動に合わせています</p>
+    </div>
+
+    <!-- 実ダメージ計算 -->
+    <div id="tab-actual" class="tab-content hidden bg-white p-6 rounded-xl shadow-md">
+      <label class="block text-sm font-medium mb-1">補正ダメージ（兆）</label>
+      <input type="number" id="correctedInput" step="any" placeholder="例: 14.39785714"
+             class="w-full px-3 py-2 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+
+      <label class="block text-sm font-medium mb-1">限界突破値</label>
+      <input type="number" id="limitInput2" step="any" placeholder="例: 1.9"
+             class="w-full px-3 py-2 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+
+      <div class="flex space-x-3 mb-4">
+        <button id="calcActualBtn"
+                class="px-4 py-2 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700">
+          計算
+        </button>
+        <button id="exampleBtn2"
+                class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg shadow hover:bg-gray-300">
+          例を入力（14.39785714, 1.9）
+        </button>
+      </div>
+
+      <div id="actualResult" class="result text-lg font-bold text-blue-700"></div>
+      <p class="text-xs text-gray-600 mt-2">※ 補正側の切り捨ても Excel と同じ挙動にしています</p>
+    </div>
   </div>
 
   <script>
-    // タブ切り替え処理
-    document.querySelectorAll('.tab').forEach(tab => {
-      tab.addEventListener('click', () => {
-        document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-        document.querySelectorAll('.content').forEach(c => c.classList.remove('active'));
-        tab.classList.add('active');
-        document.getElementById(tab.dataset.tab).classList.add('active');
+    // タブ切替
+    document.querySelectorAll('.tab-btn').forEach(btn => {
+      btn.addEventListener('click', () => {
+        document.querySelectorAll('.tab-btn').forEach(b => {
+          b.dataset.active = "false";
+        });
+        document.querySelectorAll('.tab-content').forEach(c => {
+          c.classList.add('hidden');
+        });
+
+        btn.dataset.active = "true";
+        document.getElementById(btn.dataset.tab).classList.remove('hidden');
       });
     });
 
+    // 計算式
+    function calcCorrectedDamage(actual, limitBreak) {
+      const base = (-1 + Math.sqrt(1 + 4 * (1 + limitBreak) * (actual - 1) / 5)) / 2;
+      const n = Math.trunc(base);
+      return 1 + n + ((actual - 1 - (5 * n * (n + 1)) / (1 + limitBreak)))
+        * (1 + limitBreak) / (10 * (n + 1));
+    }
+
+    function calcActualDamage(corrected, limitBreak) {
+      const n = Math.trunc(corrected - 1);
+      return 1 + 5 * n * (n + 1) / (1 + limitBreak)
+        + 10 * (n + 1) / (1 + limitBreak) * (corrected - 1 - n);
+    }
+
     // 補正ダメージ計算
-    function calculateCorrected() {
+    document.getElementById('calcCorrectedBtn').addEventListener('click', () => {
       const actual = parseFloat(document.getElementById('actualInput').value);
       const limit = parseFloat(document.getElementById('limitInput1').value);
       if (isNaN(actual) || isNaN(limit)) {
-        document.getElementById('correctedResult').innerText = "入力してください。";
+        document.getElementById('correctedResult').innerText = "数値を入力してください";
         return;
       }
-
-      const base = (-1 + Math.sqrt(1 + 4 * (1 + limit) * (actual - 1) / 5)) / 2;
-      const n = Math.floor(base);
-
-      const corrected = 1 + n
-        + ((actual - 1 - 5 * n * (n + 1)) / (1 + limit))
-          * (1 + limit) / (10 * (n + 1));
-
       document.getElementById('correctedResult').innerText =
-        "補正ダメージ: " + corrected.toFixed(6) + " 兆";
-    }
+        "補正ダメージ: " + calcCorrectedDamage(actual, limit).toFixed(8) + " 兆";
+    });
 
     // 実ダメージ計算
-    function calculateActual() {
+    document.getElementById('calcActualBtn').addEventListener('click', () => {
       const corrected = parseFloat(document.getElementById('correctedInput').value);
       const limit = parseFloat(document.getElementById('limitInput2').value);
       if (isNaN(corrected) || isNaN(limit)) {
-        document.getElementById('actualResult').innerText = "入力してください。";
+        document.getElementById('actualResult').innerText = "数値を入力してください";
         return;
       }
-
-      const n = Math.floor(corrected - 1);
-      const actual = 1
-        + 5 * n * (n + 1) / (1 + limit)
-        + 10 * (n + 1) / (1 + limit) * (corrected - 1 - n);
-
       document.getElementById('actualResult').innerText =
-        "実ダメージ: " + actual.toFixed(6) + " 兆";
-    }
+        "実ダメージ: " + calcActualDamage(corrected, limit).toFixed(8) + " 兆";
+    });
+
+    // サンプル入力
+    document.getElementById('exampleBtn').addEventListener('click', () => {
+      document.getElementById('actualInput').value = 334;
+      document.getElementById('limitInput1').value = 1.9;
+      document.getElementById('calcCorrectedBtn').click();
+    });
+    document.getElementById('exampleBtn2').addEventListener('click', () => {
+      document.getElementById('correctedInput').value = 14.39785714;
+      document.getElementById('limitInput2').value = 1.9;
+      document.getElementById('calcActualBtn').click();
+    });
   </script>
 </body>
 </html>
