--- a/index.html
+++ b/index.html
@@ -8,33 +8,40 @@
 </head>
 <body class="bg-gray-50 text-gray-900">
   <div class="max-w-2xl mx-auto p-6">
-    <h1 class="text-2xl font-bold text-center mb-6">OPTCダメージ補正計算ツール</h1>
+    <!-- 言語切替 -->
+    <div class="flex justify-end mb-4 space-x-2">
+      <button id="lang-ja" class="px-3 py-1 border rounded">日本語</button>
+      <button id="lang-en" class="px-3 py-1 border rounded">English</button>
+    </div>
+
+    <h1 class="text-2xl font-bold text-center mb-6" data-i18n="title">OPTCダメージ補正計算ツール</h1>
 
     <!-- タブ -->
     <div class="flex space-x-2 mb-6 justify-center">
       <button class="tab-btn px-4 py-2 rounded-lg border bg-white shadow text-sm font-semibold data-[active=true]:bg-blue-500 data-[active=true]:text-white"
-              data-tab="tab-corrected" data-active="true">
+              data-tab="tab-corrected" data-active="true" data-i18n="correctedTab">
         補正ダメージ計算
       </button>
       <button class="tab-btn px-4 py-2 rounded-lg border bg-white shadow text-sm font-semibold data-[active=true]:bg-blue-500 data-[active=true]:text-white"
-              data-tab="tab-actual" data-active="false">
+              data-tab="tab-actual" data-active="false" data-i18n="actualTab">
         実ダメージ計算
       </button>
     </div>
 
     <!-- 補正ダメージ計算 -->
     <div id="tab-corrected" class="tab-content bg-white p-6 rounded-xl shadow-md">
-      <label class="block text-sm font-medium mb-1">実ダメージ（兆）</label>
+      <label class="block text-sm font-medium mb-1" data-i18n="inputActual">実ダメージ（兆）</label>
       <input type="number" id="actualInput" step="any" placeholder="例: 334"
              class="w-full px-3 py-2 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
 
-      <label class="block text-sm font-medium mb-1">限界突破値</label>
+      <label class="block text-sm font-medium mb-1" data-i18n="inputLimit">限界突破値</label>
       <input type="number" id="limitInput1" step="any" placeholder="例: 1.9"
              class="w-full px-3 py-2 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
 
       <div class="flex space-x-3 mb-4">
         <button id="calcCorrectedBtn"
-                class="px-4 py-2 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700">
+                class="px-4 py-2 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700"
+                data-i18n="calc">
           計算
         </button>
       </div>
@@ -44,17 +51,18 @@
 
     <!-- 実ダメージ計算 -->
     <div id="tab-actual" class="tab-content hidden bg-white p-6 rounded-xl shadow-md">
-      <label class="block text-sm font-medium mb-1">補正ダメージ（兆）</label>
+      <label class="block text-sm font-medium mb-1" data-i18n="inputCorrected">補正ダメージ（兆）</label>
       <input type="number" id="correctedInput" step="any" placeholder="例: 14.39785714"
              class="w-full px-3 py-2 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
 
-      <label class="block text-sm font-medium mb-1">限界突破値</label>
+      <label class="block text-sm font-medium mb-1" data-i18n="inputLimit">限界突破値</label>
       <input type="number" id="limitInput2" step="any" placeholder="例: 1.9"
              class="w-full px-3 py-2 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
 
       <div class="flex space-x-3 mb-4">
         <button id="calcActualBtn"
-                class="px-4 py-2 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700">
+                class="px-4 py-2 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700"
+                data-i18n="calc">
           計算
         </button>
       </div>
@@ -64,6 +72,54 @@
   </div>
 
   <script>
+    // 辞書
+    const translations = {
+      ja: {
+        title: "OPTCダメージ補正計算ツール",
+        correctedTab: "補正ダメージ計算",
+        actualTab: "実ダメージ計算",
+        inputActual: "実ダメージ（兆）",
+        inputCorrected: "補正ダメージ（兆）",
+        inputLimit: "限界突破値",
+        calc: "計算",
+        correctedResult: "補正ダメージ: ",
+        actualResult: "実ダメージ: ",
+        inputError: "数値を入力してください",
+        unit: " 兆"
+      },
+      en: {
+        title: "OPTC Damage Limit Calculator",
+        correctedTab: "Corrected Damage",
+        actualTab: "Actual Damage",
+        inputActual: "Actual Damage (trillions)",
+        inputCorrected: "Corrected Damage (trillions)",
+        inputLimit: "Limit Break Value",
+        calc: "Calculate",
+        correctedResult: "Corrected Damage: ",
+        actualResult: "Actual Damage: ",
+        inputError: "Please enter a number",
+        unit: " T"
+      }
+    };
+
+    let currentLang = localStorage.getItem("lang") || "ja";
+
+    function switchLang(lang) {
+      currentLang = lang;
+      localStorage.setItem("lang", lang);
+      document.querySelectorAll("[data-i18n]").forEach(el => {
+        const key = el.getAttribute("data-i18n");
+        if (translations[lang][key]) {
+          el.innerText = translations[lang][key];
+        }
+      });
+    }
+
+    document.getElementById("lang-ja").onclick = () => switchLang("ja");
+    document.getElementById("lang-en").onclick = () => switchLang("en");
+
+    switchLang(currentLang);
+
     // タブ切替
     document.querySelectorAll('.tab-btn').forEach(btn => {
       btn.addEventListener('click', () => {
@@ -73,7 +129,6 @@
         document.querySelectorAll('.tab-content').forEach(c => {
           c.classList.add('hidden');
         });
-
         btn.dataset.active = "true";
         document.getElementById(btn.dataset.tab).classList.remove('hidden');
       });
@@ -98,11 +153,11 @@
       const actual = parseFloat(document.getElementById('actualInput').value);
       const limit = parseFloat(document.getElementById('limitInput1').value);
       if (isNaN(actual) || isNaN(limit)) {
-        document.getElementById('correctedResult').innerText = "数値を入力してください";
+        document.getElementById('correctedResult').innerText = translations[currentLang].inputError;
         return;
       }
       document.getElementById('correctedResult').innerText =
-        "補正ダメージ: " + calcCorrectedDamage(actual, limit).toFixed(8) + " 兆";
+        translations[currentLang].correctedResult + calcCorrectedDamage(actual, limit).toFixed(8) + translations[currentLang].unit;
     });
 
     // 実ダメージ計算
@@ -110,11 +165,11 @@
       const corrected = parseFloat(document.getElementById('correctedInput').value);
       const limit = parseFloat(document.getElementById('limitInput2').value);
       if (isNaN(corrected) || isNaN(limit)) {
-        document.getElementById('actualResult').innerText = "数値を入力してください";
+        document.getElementById('actualResult').innerText = translations[currentLang].inputError;
         return;
       }
       document.getElementById('actualResult').innerText =
-        "実ダメージ: " + calcActualDamage(corrected, limit).toFixed(8) + " 兆";
+        translations[currentLang].actualResult + calcActualDamage(corrected, limit).toFixed(8) + translations[currentLang].unit;
     });
   </script>
 </body>
