--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <label class="block text-sm font-medium mb-1">
         <span data-i18n="inputLimit">ダメージ限界突破値</span>
-        <a href="#" id="openModal" class="ml-2 text-blue-600 underline text-sm">ダメージ限界突破値とは？</a>
+        <a href="#" id="openModal" class="ml-2 text-blue-600 underline text-sm" data-i18n="whatIsLimit">ダメージ限界突破値とは？</a>
       </label>
       <input type="number" id="limitInput1" step="0.1" min="0" max="3" data-i18n-placeholder="phLimit"
              placeholder="例: 0.0 ~ 3.0"
@@ -63,7 +63,7 @@
 
       <label class="block text-sm font-medium mb-1">
         <span data-i18n="inputLimit">ダメージ限界突破値</span>
-        <a href="#" id="openModal2" class="ml-2 text-blue-600 underline text-sm">ダメージ限界突破値とは？</a>
+        <a href="#" id="openModal2" class="ml-2 text-blue-600 underline text-sm" data-i18n="whatIsLimit">ダメージ限界突破値とは？</a>
       </label>
       <input type="number" id="limitInput2" step="0.1" min="0" max="3" data-i18n-placeholder="phLimit"
              placeholder="例: 0.0 ~ 3.0"
@@ -85,9 +85,9 @@
   <div id="modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
     <div class="bg-white rounded-lg shadow-lg max-w-lg w-full p-4 relative">
       <button id="closeModal" class="absolute top-2 right-2 text-gray-600 hover:text-black">✖</button>
-      <h2 class="text-lg font-bold mb-3">ダメージ限界突破値とは？</h2>
+      <h2 class="text-lg font-bold mb-3" data-i18n="whatIsLimit">ダメージ限界突破値とは？</h2>
       <img src="damage-limit-break-detail.png" alt="ダメージ限界突破の説明" class="mb-3 rounded">
-      <p class="text-sm text-gray-700">
+      <p class="text-sm text-gray-700" data-i18n="limitDesc">
         ダメージ限界突破は、キャラクターレベルや属性・タイプごとの強化値を合計した数値で、
         一味全体に効果を発揮します。最大で +3.0 まで上昇します。
       </p>
@@ -104,6 +104,8 @@
         inputActual: "実ダメージ（兆）",
         inputCorrected: "補正ダメージ（兆）",
         inputLimit: "ダメージ限界突破値",
+        whatIsLimit: "ダメージ限界突破値とは？",
+        limitDesc: "ダメージ限界突破はキャラクターレベル・属性・タイプによる合計値を参照し、味方全体に効果を発揮します。",
         calc: "計算",
         correctedResult: "補正ダメージ: ",
         actualResult: "実ダメージ: ",
@@ -120,6 +122,8 @@
         inputActual: "Actual Damage (trillions)",
         inputCorrected: "Corrected Damage (trillions)",
         inputLimit: "Damage Limit Break Value",
+        whatIsLimit: "What is Damage Limit Break?",
+        limitDesc: "Damage Limit Break refers to the total value based on character level, attribute, and type, and applies its effect to the entire team.",
         calc: "Calculate",
         correctedResult: "Corrected Damage: ",
         actualResult: "Actual Damage: ",
