--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         inputCorrected: "補正ダメージ（兆）",
         inputLimit: "ダメージ限界突破値",
         whatIsLimit: "ダメージ限界突破値とは？",
-        limitDesc: "ダメージ限界突破はキャラクターレベル・属性・タイプによる合計値を参照し、味方全体に効果を発揮します。",
+        limitDesc: "ダメージ限界突破はキャラクターレベル・属性・タイプによる合計値を参照し、味方全体に効果を発揮します。最大で +3.0 まで上昇します。",
         calc: "計算",
         correctedResult: "補正ダメージ: ",
         actualResult: "実ダメージ: ",
@@ -123,7 +123,7 @@
         inputCorrected: "Corrected Damage (trillions)",
         inputLimit: "Damage Limit Break Value",
         whatIsLimit: "What is Damage Limit Break?",
-        limitDesc: "Damage Limit Break refers to the total value based on character level, attribute, and type, and applies its effect to the entire team.",
+        limitDesc: "Damage Limit Break refers to the total value based on character level, attribute, and type, and applies its effect to the entire team. It can increase up to a maximum of +3.0.",
         calc: "Calculate",
         correctedResult: "Corrected Damage: ",
         actualResult: "Actual Damage: ",
