--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <button id="lang-en" class="px-3 py-1 border rounded">English</button>
     </div>
 
-    <h1 class="flex items-center justify-center text-2xl font-bold mb-6" data-i18n="title">
+    <h1 class="flex items-center justify-center text-2xl font-bold mb-6">
       <img src="damage-limit-break-icon.png" alt="icon" class="w-8 h-8 mr-2">
-      OPTCダメージ補正計算ツール
+      <span data-i18n="title">OPTCダメージ補正計算ツール</span>
     </h1>
 
     <!-- タブ -->
