--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <h1 class="flex items-center justify-center text-2xl font-bold mb-6 leading-tight">
       <img src="damage-limit-break-icon.png" alt="icon" class="w-8 h-8 mr-2">
-      <span data-i18n="title">OPTCダメージ補正計算ツール</span>
+      <span data-i18n="title" class="break-all">OPTCダメージ補正計算ツール</span>
     </h1>
 
     <!-- タブ -->
@@ -101,7 +101,7 @@
     // 辞書
     const translations = {
       ja: {
-        title: "トレクル<wbr>ダメージ限界突破<wbr>シミュレーター",
+        title: "トレクル&#8203;ダメージ限界突破&#8203;シミュレーター",
         correctedTab: "補正ダメージ計算",
         actualTab: "実ダメージ計算",
         inputActual: "実ダメージ（兆）",
