--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <h1 class="flex items-center justify-center text-2xl font-bold mb-6 leading-tight">
-      <img src="damage-limit-break-icon.png" alt="icon" class="w-8 h-8 mr-2">
+      <img src="damage-limit-break-icon.png" alt="icon" class="w-8 h-8 mr-2 rounded-full">
       <span data-i18n="title">トレクル ダメージ限界突破シミュレーター</span>
     </h1>
 
