--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>トレクル ダメージ限界突破シミュレーター</title>
+
+  <!-- OGP -->
+  <meta property="og:title" content="OPTC Damage Limit Break Simulator">
+  <meta property="og:description" content="トレクルのダメージ限界突破値を計算できるシミュレーター">
+  <meta property="og:type" content="website">
+  <meta property "og:url" content="https://slave-of-dylan.github.io/optc-damage-limit-calculator/">
+  <meta property="og:image" content="https://slave-of-dylan.github.io/optc-damage-limit-calculator/og-image.jpeg">
+
+  <!-- Twitterカード -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="OPTC Damage Limit Break Simulator">
+  <meta name="twitter:description" content="トレクルのダメージ限界突破値を計算できるシミュレーター">
+  <meta name="twitter:image" content="https://slave-of-dylan.github.io/optc-damage-limit-calculator/og-image.jpeg">
+
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-900">
